--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "underscore": "^1.8.3",
+    "underscore-mixins": "^0.1.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
