--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chalk": "^1.1.3",
     "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
+    "cookie-parser": "^1.4.3",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
