add a progress bar for better ux

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.5",
     "vue": "^2.0.1",
+    "vue-progressbar": "^0.5.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
